fix: fix overflow issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: auto;
   font-family: 'Roboto', sans-serif;
